test/fail/integration/_fail_grammar_lformarg_1.hs
x :: Int -> Int
x Int = 3
main = print "hello"